# DUNE

./: .gitignore  buildmodules.sh  buildmoes.sh  installer.sh  release.opts
dune-ftworth/: CMakeLists.txt  README.md  config.h.cmake  dune-ftworth.pc.in  dune.module
dune-ftworth/cmake/modules/: CMakeLists.txt
dune-ftworth/doc/doxygen/: Doxylocal
dune-ftworth/dune/: CMakeLists.txt
dune-ftworth/dune/ftworth/: CMakeLists.txt  arpack_geneo_wrapper.hh  assemblewrapper.hh  cdediscretizer.hh  ftworth.hh  matrixutilities.hh  multilevel_geneo_preconditioner.hh  partitioner.hh  poweriteration_general_geneo.hh  schwarz_preconditioners.hh  subdomainutilities.hh  twolevel_geneo_preconditioner.hh
dune-ftworth/problems/: anisotropic2d.hh  barwithstripes.hh  fvcatest1.hh  fvcatest2.hh  layersanisotropic.hh  layerslinus.hh  oneweak.hh  snakeandislands.hh  spe10.hh  twoweak.hh
dune-ftworth/src/: CMakeLists.txt  DG_diagnostics.cc  DG_diagnostics.ini  README.md  circle.geo  circle.msh  cylinder2dquad.geo  cylinder2dquad.msh  cylinder3dhex.geo  cylinder3dhex.msh  dune-ftworth.cc  heterogeneous_problem.hh  islands.cc  islands.hh  islands.ini  layers.cc  layers.ini  layersanisotropic.cc  layersanisotropic.ini  platewith4holes.geo  platewith4holes.msh  poisson.cc  poisson.hh  poisson.ini  spe10.cc  spe10.hh  spe10.ini  testproblems.cc  testproblems.ini
dune-hydro/: CMakeLists.txt  config.h.cmake  dune-hydro.pc.in  dune.module  readme.md
dune-hydro/cmake/modules/: CMakeLists.txt  DuneHydroMacros.cmake
dune-hydro/doc/doxygen/: Doxylocal
dune-hydro/dune/hydro/: CMakeLists.txt  geotiffreader.hh  hydro.hh  netcdfreader.hh  nonlineardiffusioncoupledfv.hh  nonlineardiffusioncoupledmodel.hh  nonlineardiffusionfem.hh  nonlineardiffusionfv.hh  nonlineardiffusionfv_velocity.hh  nonlineardiffusionmodel.hh  rasterdataset.hh  rasterdatasetalgorithms.hh
dune-hydro/src/: CMakeLists.txt  bw90mpre.cc  bw90mpre.ini  coupledexample.cc  coupledexample.ini  dune-hydro.cc  firstexample.cc  firstexample.ini  fourthexample.cc  fourthexample.ini  readtiff.cc  readtiff.ini  secondexample.cc  secondexample.ini  stok.cc  stok.ini  stok_long_term.cc  stok_long_term.ini  thirdexample.cc  thirdexample.ini
dune-istl/dune/istl/eigenvalue/: poweriteration.hh  poweriteration_general.hh
dune-istl/dune/istl/eigenvalue/test/: CMakeLists.txt  evtest.cc  matrixinfo_general.hh
dune-istl/dune/istl/test/: identity.hh
dune-istl/test/: CMakeCache.txt
dune-moes/: dune-moes.pc.in  dune.module
dune-moes/cmake/modules/: CMakeLists.txt
dune-moes/dune/moes/: CMakeLists.txt  MatrixMult.hh  Utils.hh  arpack_geneo_wrapper.hh  convergenceTests.hh  flopUtils.hh  inversePowerIteration.hh  moes.hh  naive.hh  qrcol.hh  umfpackMoes.hh
dune-moes/dune/moes/test/: CMakeLists.txt  GStest.cc  kerntest.cc  largestEigenvalues.cc  matmultest.cc  moesvsarpackflops.cc  qrcoltest.cc  umfTest.cc
dune-nonlinopt/: .gitlab-ci.yml  BSD  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dune-nonlinopt.pc.in  dune.module
dune-nonlinopt/cmake/modules/: CMakeLists.txt  FindmuParser.cmake
dune-nonlinopt/cutest/: README.md
dune-nonlinopt/cutest/src/dune-nonlinopt/: dune-nonlinopt_main.cpp  makemaster
dune-nonlinopt/doc/doxygen/: CMakeLists.txt  Doxyfile.in  Doxylocal
dune-nonlinopt/doc/doxygen/html/: dir_5e69be5995c9f5d42bf491ae6f29600e.html
dune-nonlinopt/dune/: CMakeLists.txt
dune-nonlinopt/dune/nonlinopt/: CMakeLists.txt  circularbuffer.hh  conjugationfactor.hh  linesearch.hh  linesearchcriterion.hh  linesearchproposal.hh  nonlinopt.hh  stoppingcriterion.hh  unconstrained.hh  userinterface.hh  vectorclass.hh
dune-nonlinopt/examples/: CMakeLists.txt  problemparser.cc  rosenbrock.cc  rosenbrock.ini
dune-nonlinopt/test/: CMakeLists.txt  bard.hh  beale.hh  biggsexp6.hh  box3d.hh  brownbadlyscaled.hh  browndennis.hh  extendedrosenbrock.hh  freudensteinroth.hh  gaussian.hh  jennrichsampson.hh  kowalikosborne.hh  leastsquares.cc  leastsquares.hh  meyer.hh  osborne1.hh  osborne2.hh  powellbadlyscaled.hh  powellsingular.hh  rosenbrock.hh  test_configs.cc  test_functions.cc  wood.hh
dune-pdelab-tutorials/: Notes.md
dune-pdelab-tutorials/gridinterface/exercise/task/: grid-exercise1.cc  integration.cc
dune-pdelab-tutorials/tutorial00/exercise/task/: driver.hh
dune-pdelab-tutorials/tutorial00/src/: driver.hh  tutorial00.ini
dune-pdelab-tutorials/tutorial01/src/: driver.hh  problem.hh  tutorial01.ini
dune-pdelab-tutorials/tutorial08/doc/: tutorial08.tex
dune-pdelab-tutorials/workflow/exercise/task/: grid-exercise2.cc
dune-vtk/: .gitlab-ci.yml  CMakeLists.txt  README.md  dune.module  pyproject.toml
dune-vtk/dune/vtk/gridcreators/: lagrangegridcreator.hh
dune-vtk/dune/vtk/gridfunctions/: lagrangegridfunction.hh
dune-vtk/dune/vtk/utility/: lagrangepoints.hh  lagrangepoints.impl.hh
dune-vtk/dune/vtk/utility/test/: test-lagrange.cc
dune-vtk/src/test/: parallel_reader_writer_test.cc  reader_writer_test.cc
