add_executable("dune-ftworth" dune-ftworth.cc)
target_link_dune_default_libraries("dune-ftworth")
add_executable("testproblems" testproblems.cc)
target_link_dune_default_libraries("testproblems")
add_executable("islands" islands.cc)
target_link_dune_default_libraries("islands")
add_executable("poisson" poisson.cc)
target_link_dune_default_libraries("poisson")
add_executable("spe10" spe10.cc)
target_link_dune_default_libraries("spe10")
add_executable("layers" layers.cc)
target_link_dune_default_libraries("layers")
add_executable("layersanisotropic" layersanisotropic.cc)
target_link_dune_default_libraries("layersanisotropic")
add_executable("DG_diagnostics" DG_diagnostics.cc)
target_link_dune_default_libraries("DG_diagnostics")
dune_symlink_to_source_files(FILES dune-ftworth.ini testproblems.ini  DG_diagnostics.ini unitsquare.geo unitsquare.msh unitcube.geo unitcube.msh circle.msh circle.geo cylinder3dhex.geo cylinder3dhex.msh platewith4holes.geo platewith4holes.msh cylinder2dquad.geo cylinder2dquad.msh spe10.ini islands.ini poisson.ini layers.ini layersanisotropic.ini)

