# add_executable(simdtest test.cc)
# target_link_libraries(simdtest PRIVATE dunecommon)
# add_executable(qrtest qrtest.cc)
# target_link_libraries(qrtest PRIVATE dunecommon)
# add_executable(naivetest naivetest.cc)
# add_executable(qrvectest qrvectest.cc)
add_executable(qrcoltest qrcoltest.cc)
add_executable(matmultest matmultest.cc)
add_executable(largestEigenvalues largestEigenvalues.cc)
add_executable(umfTest umfTest.cc)
